--- a/public/css/style.css
+++ b/public/css/style.css
@@ -635,8 +635,8 @@ footer {
 }
 
 .divRight .divCover #imgCover {
-    width: 100%;
-    height: 100%;
+    width: 97%;
+    height: 97%;
 }
 
 .divRight .statusBlock {
@@ -726,7 +726,7 @@ footer {
     color: red;
 }
 
-.postImage{
+.postImage, .postVideo{
     width: 85px !important;
     margin-right: 45px !important;
 }
@@ -1017,7 +1017,7 @@ footer {
 }
 
 .divRight .divAction .statusRightPanel .divComment .commentCompose {
-    width: 100%;
+    width: 98%;
     height: auto;
     display: inline-block;
     float:left;
