Hoàn thành chức năng share địa điểm
Absolutely!

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -703,6 +703,66 @@ footer {
     height: 90px;
 }
 
+.divRight .statusBlock .statusContent .statusComposeArea .place-image > span{
+    position: absolute;
+    color: red;
+    font-size: 20px !important;
+}
+
+.divRight .statusBlock .statusContent .statusComposeArea .place-description > span{
+    margin-top: 30px;
+    color: red;
+    margin-left: 0px !important;
+    font-size: 20px !important;
+}
+
+.divRight .statusBlock .statusContent .statusComposeArea .place-name > span{
+    color: red;
+    font-size: 20px !important;
+}
+
+.divRight .statusBlock .statusContent .statusComposeArea .place-image input[type="file"]{
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    opacity: 0;
+    z-index: 2;
+    margin-left: 5px;
+    cursor: pointer;
+    display: inline-block;
+}
+
+.divRight .statusBlock .statusContent .statusComposeArea .hide-btn{
+    width: 90px;
+    height: 90px;
+    margin-left: 5px;
+    position: absolute;
+    z-index: 1;
+    background: url("../img/upload.png") no-repeat;
+    background-position: center;
+    border: 1px dotted #1fa3ff;
+}
+
+.divRight .statusBlock .statusContent .statusComposeArea .txt-place-name{
+    margin-left: 115px;
+    height: 30px;
+    font-family: "Roboto Slab", Tahoma;
+    font-size: 13px;
+    border: none;
+    padding-left: 10px;
+    width: 334px;
+}
+
+.divRight .statusBlock .statusContent .statusComposeArea .txt-place-des {
+    margin-left: 115px;
+    margin-top: 10px;
+    width: 75%;
+    font-size: 10px;
+    padding-top: 5px;
+    padding-left: 10px;
+    height: 45px;
+}
+
 .divRight .statusBlock .statusContent .statusComposeArea input {
     width: 88%;
     height: 40px;
@@ -726,7 +786,7 @@ footer {
     color: red;
 }
 
-.postImage, .postVideo{
+.postImage, .postVideo, .postShare{
     width: 85px !important;
     margin-right: 45px !important;
 }
@@ -865,6 +925,11 @@ footer {
     float:left;
     background-color: #f9f9f9;
     word-wrap:break-word;
+}
+
+.divRight .divAction .statusRightPanel .statusContent .status-place-name .hashtag{
+    color: #1fa3ff;
+    cursor: pointer;
 }
 
 .divRight .divAction .statusRightPanel .statusContent img{
