--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1991,3 +1991,120 @@ footer {
 .imgareaselect-selection {
 }
 /*********** END CSS for Update Info **********/
+
+/*****Button ket ban trang ca nhan********/
+
+.a-btn{
+    background: -webkit-linear-gradient(top, #86C5FD 0%, #1FA3FF 100%);
+    padding-left:20px;
+    padding-right:80px;
+    height:38px;
+    display:inline-block;
+    position:relative;
+    border:1px solid #5d81ab;
+    box-shadow:0px 1px 1px rgba(255,255,255,0.8) inset, 1px 1px 3px rgba(0,0,0,0.2), 0px 0px 0px 4px rgba(188,188,188,0.5);
+    border-radius:20px;
+    float:left;
+    clear:both;
+    margin:10px 0px;
+    overflow:hidden;
+    transition:all 0.3s linear;
+}
+.a-btn :hover{
+    text-decoration: none !important;
+}
+
+.a-btn-text{
+    padding-top:5px;
+    display:block;
+    font-size: 18px;
+    white-space:nowrap;
+    text-shadow:0px 1px 1px rgba(255,255,255,0.3);
+    color:#446388;
+    transition:all 0.2s linear;
+}
+.a-btn-slide-text{
+    position:absolute;
+    height:100%;
+    top:0px;
+    right:52px;
+    width: 0;
+    background:#63707e;
+    text-shadow:0px -1px 1px #363f49;
+    color:#fff;
+    font-size:15px;
+    white-space:nowrap;
+    text-align:center;
+    overflow:hidden;
+    line-height:38px;
+    box-shadow:-1px 0px 1px rgba(255,255,255,0.4), 1px 1px 2px rgba(0,0,0,0.2) inset;
+    transition:width 0.3s linear;
+}
+.a-btn-icon-right{
+    position:absolute;
+    right:0px;
+    top:0px;
+    height:100%;
+    width:52px;
+    border-left:1px solid #5d81ab;
+    -webkit-box-shadow:1px 0px 1px rgba(255,255,255,0.4) inset;
+    -moz-box-shadow:1px 0px 1px rgba(255,255,255,0.4) inset;
+    box-shadow:1px 0px 1px rgba(255,255,255,0.4) inset;
+}
+.a-btn-icon-right span{
+    width:38px;
+    height:38px;
+    opacity:0.7;
+    position:absolute;
+    left:50%;
+    top:50%;
+    margin:-20px 0px 0px -20px;
+    background:transparent url(../img/arrow_right.png) no-repeat 50% 55%;
+    transition:all 0.3s linear;
+}
+.a-btn:hover{
+    padding-right:140px;
+    box-shadow:0px 1px 1px rgba(255,255,255,0.8) inset, 1px 1px 3px rgba(0,0,0,0.2);
+}
+.a-btn:hover .a-btn-text{
+    text-shadow:0px 1px 1px #5d81ab;
+    color:#fff;
+}
+.a-btn:hover .a-btn-slide-text{
+    width:70px;
+}
+.a-btn:hover .a-btn-icon-right span{
+    opacity:1;
+}
+.a-btn:active{
+    position:relative;
+    top:1px;
+    background:#5d81ab;
+    box-shadow:1px 1px 2px rgba(0,0,0,0.4) inset;
+    border-color:#80a9da;
+}
+
+[data-notifications] {
+    position: relative !important;
+}
+
+/* append the notification badge after it */
+[data-notifications]:after {
+
+    /* the burger */
+    content: attr(data-notifications);
+
+    /* the fries */
+    position: absolute;
+    background: red;
+    border-radius: 20%;
+    display: inline-block;
+    /*padding: 0.3em;*/
+    color: #f2f2f2;
+    right: 80px;
+    top: -15px;
+    padding: 0px 3px 0px 3px;
+    font-size: 12px;
+}
+
+/*****END Button ket ban trang ca nhan********/
