--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2107,4 +2107,45 @@ footer {
     font-size: 12px;
 }
 
+.arrow_box {
+    position: relative;
+    background: white;
+    border: 1px solid #6FCAF0;
+    width: 300px;
+    min-height: 70px;
+    left: -315px;
+    top: -8px;
+    border-radius: 5px;
+    color: black;
+
+}
+
+.arrow_box:hover{
+    left: -319px;
+}
+
+.arrow_box:after, .arrow_box:before {
+    left: 100%;
+    top: 23px;
+    border:1px solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+}
+
+.arrow_box:after {
+    border-color: rgba(0, 0, 0, 0);
+    border-left-color: white;
+    border-width: 7px;
+    margin-top: -7px;
+}
+.arrow_box:before {
+    border-color: rgba(111, 202, 240, 0);
+    border-left-color: #6FCAF0;
+    border-width: 8px;
+    margin-top: -8px;
+}
+
 /*****END Button ket ban trang ca nhan********/
