--- a/module/Application/view/layout/homepage.phtml
+++ b/module/Application/view/layout/homepage.phtml
@@ -25,7 +25,7 @@
         ->prependFile($this->basePath() . '/js/jquery.easing.1.3.js')
         ->prependFile($this->basePath() . '/js/bootstrap.min.js')
         ->prependFile($this->basePath() . '/js/jquery.validate.min.js')
-        ->prependFile($this->basePath() . '/js/jquery-1.9.1.js')
+        ->prependFile($this->basePath() . '/js/jquery.1.7.1.min.js')
         ->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
         ->prependFile($this->basePath() . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
     ; ?>
