--- a/module/Userpage/view/userpage/userpage/index.phtml
+++ b/module/Userpage/view/userpage/userpage/index.phtml
@@ -476,7 +476,7 @@ function time_difference($date)
 
                     ?>
 
-                    <video id="example_video_1" class="video-js vjs-default-skin" controls preload="none" width="100%" height="375"
+                    <video id="example_video_1" class="video-js vjs-default-skin" controls preload="true" width="100%" height="375"
                            poster="<?php echo $this->basePath().'/img/Logo_Video.png'; ?>"
                            data-setup="{}">
                         <source src="<?php echo $this->basePath().'/uploads/'.$pathViddeo;?>"
